Fix direction of picture and paragraph
Changed row reverse to just row in flex-direction

--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ h2 {
     
     .introduction {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: row;
         justify-content: space-between;
         text-align: left;
     }
